--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -83,6 +83,9 @@ h1 {
   font-size: 2em;
   margin: 0.67em 0;
   font-size: 2em;
+  float: left;
+  width: 100%;
+  max-width: 180px;
   margin: 0.67em 0;
 }
 
@@ -1469,6 +1472,7 @@ input[type=search]::-webkit-search-cancel-button {
   text-transform: uppercase;
   font-size: 16px;
   line-height: 19px;
+  display: flex;
 }
 
 .ticket-card__desc {
@@ -1484,7 +1488,7 @@ input[type=search]::-webkit-search-cancel-button {
 }
 
 .ticket-card--color01 {
-  background-color: #f8bc7f;
+  background-color: #fcf52198;
 }
 .ticket-card--color01 .ticket-card__del {
   color: rgba(0, 0, 0, 0.5);
@@ -1928,9 +1932,10 @@ input[type=search]::-webkit-search-cancel-button {
 .header__input {
   -webkit-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out;
-  margin-left: auto;
   margin-top: 4px;
   color: #fff;
+  display: flex;
+  align-items: center;
 }
 .header__input:hover {
   opacity: 0.7;
@@ -2009,7 +2014,7 @@ input[type=search]::-webkit-search-cancel-button {
 
 .page-footer {
   margin-top: 40px;
-  padding: 45px 0 58px;
+  padding: 5px 0 25px;
   color: #fff;
   background-color: #205e03;
 }
@@ -2018,29 +2023,18 @@ input[type=search]::-webkit-search-cancel-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  justify-content: space-around;
   -webkit-box-flex: 0;
   -ms-flex: none;
   flex: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 300px;
 }
 
 .page-footer__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   margin: 0 auto;
   padding: 0 37px;
   width: 1042px;
@@ -2049,14 +2043,9 @@ input[type=search]::-webkit-search-cancel-button {
   align-items: flex-end;
 }
 
-.page-footer__logo {
-  margin-bottom: 25px;
-}
-
 .page-footer__logo-academy {
   display: inline-block;
   vertical-align: top;
-  margin: 2px 0 38px;
   width: 132px;
   opacity: 0.635417;
   -webkit-transition: opacity 0.3s ease-out;
@@ -3514,6 +3503,11 @@ input[type=search]::-webkit-search-cancel-button {
     background-size: cover;
   }
 }
+.footer-form {
+  display: flex;
+  justify-content: space-between;
+}
+
 .m-auto {
   margin: 0 auto;
 }
