Продолжена работа над фронтендом, поправлен бекэнд.

--- a/frontend/src/app/pages/offers/footer/footer.component.html
+++ b/frontend/src/app/pages/offers/footer/footer.component.html
@@ -4,7 +4,12 @@
       <a href="/offers" class="page-footer__logo logo">
         <img ngSrc="assets/img/logo-footer.svg" width="86" height="35" alt="Логотип MishkaBoard">
       </a>
-      <p class="page-footer__copyright">Разработано совместно с "Высшей инженерной школой"</p>
+      <p class="page-footer__copyright">Разработано на курсе
+        <a class="page-footer__ref" href="https://hse.spbstu.ru/Retraining/Programs/Javascript-Developer/"
+           aria-label="Ссылка на курс в Высшей инженерной школе">
+          "Веб-разработчик. Языки JavaScript/TypeScript"
+        </a>
+      </p>
       <a href="https://hse.spbstu.ru" class="page-footer__logo-academy"
          aria-label="Ссылка на сайт Высшей инженерной школы">
         <img ngSrc="assets/img/hse.svg" alt="Логотип Высшей инженерной школы" height="160" width="160"/>
