--- a/frontend/src/app/pages/offers/header/header.component.html
+++ b/frontend/src/app/pages/offers/header/header.component.html
@@ -6,6 +6,6 @@
   <div class="header__input">
     <p-menubar [model]="items"></p-menubar>
   </div>
-  <div class="user-login">Константин Константинопольский</div>
+  <div class="user-login">{{userName}}</div>
 
 </div>
