Продолжена работа над фронтендом, поправлен бекэнд.

--- a/frontend/src/app/pages/auth/auth.component.html
+++ b/frontend/src/app/pages/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="page-content">
+<main class="page-content">
   <p-tabView class="m-auto">
     <p-tabPanel [cache]='isTabCaching' header="Вход">
       <ng-template pTemplate="content">
@@ -10,6 +10,6 @@
       <app-registration></app-registration>
     </p-tabPanel>
   </p-tabView>
-</div>
+</main>
 
 <p-toast position="top-left"></p-toast>
