--- a/frontend/src/assets/general.scss
+++ b/frontend/src/assets/general.scss
@@ -45,7 +45,7 @@ $background-color_28: #205e03;
 $background-color_29: rgba(255, 255, 255, 0.05);
 $background-color_30: rgba(216, 216, 216, 0.21);
 $background-color_31: #95939147;
-$background-color_32: #fcf52198;
+$background-color_32: #fbff00ef;
 $border-color_1: #6c7a86 transparent transparent;
 $border-color_2: transparent transparent #6c7a86;
 $border-color_3: transparent #999 #999;
@@ -2388,7 +2388,7 @@ input[type="search"] {
   margin: 0 auto;
   width: 450px;
   min-height: 450px;
-  padding: 47px 50px 32px 50px;
+  padding: 70px 50px 32px 50px;
   border-radius: 15px;
 }
 
@@ -2510,7 +2510,7 @@ input[type="search"] {
 
   label {
     position: absolute;
-    top: 10px;
+    bottom: 35px;
     left: 0;
     font-size: 16px;
     line-height: 19px;
@@ -2518,16 +2518,14 @@ input[type="search"] {
   }
 
   input {
-    width: 60%;
-    height: 44px;
-    padding: 12px 10px;
-    margin-left: 130px;
+    width: 100%;
+    height: 30px;
+    padding: 12px 5px;
     font-size: 16px;
     line-height: 19px;
     color: $color_3;
     background-color: $background-color_1;
     border: 0;
-    border-radius: 5px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.26);
     -webkit-transition: border-color 0.3s ease-out;
     transition: border-color 0.3s ease-out;
@@ -2578,6 +2576,10 @@ input[type="search"] {
     font-size: 22px;
     letter-spacing: 2px;
   }
+
+  .label-offer {
+    top: 5px;
+  }
 }
 
 .sign-up__avatar {
@@ -2619,12 +2621,8 @@ input[type="search"] {
 }
 
 .sign-up__field {
-  margin-bottom: 26px;
+  margin-bottom: 50px;
   margin-left: 4px;
-
-  &:last-of-type {
-    margin-bottom: 40px;
-  }
 }
 
 .sign-up__button {
@@ -2642,7 +2640,7 @@ input[type="search"] {
   margin: 0 auto;
   width: 450px;
   min-height: 300px;
-  padding: 47px 50px 32px 50px;
+  padding: 70px 50px 32px 50px;
   border-radius: 15px;
 }
 
@@ -2656,12 +2654,8 @@ input[type="search"] {
 }
 
 .login__field {
-  margin-bottom: 26px;
+  margin-bottom: 50px;
   margin-left: 4px;
-
-  &:last-of-type {
-    margin-bottom: 40px;
-  }
 }
 
 .login__button {
@@ -2965,7 +2959,7 @@ input[type="search"] {
   &::before {
     content: "₽";
     position: absolute;
-    top: 12px;
+    top:2px;
     left: 0;
     font-size: 22px;
     line-height: 26px;
@@ -2973,7 +2967,7 @@ input[type="search"] {
   }
 
   label {
-    top: 17px;
+    top: 5px;
   }
 
   input[type="number"] {
