--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1488,7 +1488,7 @@ input[type=search]::-webkit-search-cancel-button {
 }
 
 .ticket-card--color01 {
-  background-color: #fcf52198;
+  background-color: #fbff00ef;
 }
 .ticket-card--color01 .ticket-card__del {
   color: rgba(0, 0, 0, 0.5);
@@ -2094,7 +2094,7 @@ input[type=search]::-webkit-search-cancel-button {
   margin: 0 auto;
   width: 450px;
   min-height: 450px;
-  padding: 47px 50px 32px 50px;
+  padding: 70px 50px 32px 50px;
   border-radius: 15px;
 }
 
@@ -2206,23 +2206,21 @@ input[type=search]::-webkit-search-cancel-button {
 }
 .form__field label {
   position: absolute;
-  top: 10px;
+  bottom: 35px;
   left: 0;
   font-size: 16px;
   line-height: 19px;
   color: rgba(255, 255, 255, 0.62);
 }
 .form__field input {
-  width: 60%;
-  height: 44px;
-  padding: 12px 10px;
-  margin-left: 130px;
+  width: 100%;
+  height: 30px;
+  padding: 12px 5px;
   font-size: 16px;
   line-height: 19px;
   color: #fff;
   background-color: transparent;
   border: 0;
-  border-radius: 5px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.26);
   -webkit-transition: border-color 0.3s ease-out;
   transition: border-color 0.3s ease-out;
@@ -2263,6 +2261,9 @@ input[type=search]::-webkit-search-cancel-button {
   font-size: 22px;
   letter-spacing: 2px;
 }
+.form__field .label-offer {
+  top: 5px;
+}
 
 .sign-up__avatar {
   display: none;
@@ -2301,11 +2302,8 @@ input[type=search]::-webkit-search-cancel-button {
 }
 
 .sign-up__field {
-  margin-bottom: 26px;
+  margin-bottom: 50px;
   margin-left: 4px;
-}
-.sign-up__field:last-of-type {
-  margin-bottom: 40px;
 }
 
 .sign-up__button {
@@ -2323,7 +2321,7 @@ input[type=search]::-webkit-search-cancel-button {
   margin: 0 auto;
   width: 450px;
   min-height: 300px;
-  padding: 47px 50px 32px 50px;
+  padding: 70px 50px 32px 50px;
   border-radius: 15px;
 }
 
@@ -2336,11 +2334,8 @@ input[type=search]::-webkit-search-cancel-button {
 }
 
 .login__field {
-  margin-bottom: 26px;
+  margin-bottom: 50px;
   margin-left: 4px;
-}
-.login__field:last-of-type {
-  margin-bottom: 40px;
 }
 
 .login__button {
@@ -2596,14 +2591,14 @@ input[type=search]::-webkit-search-cancel-button {
 .form__field--price::before {
   content: "₽";
   position: absolute;
-  top: 12px;
+  top: 2px;
   left: 0;
   font-size: 22px;
   line-height: 26px;
   opacity: 0;
 }
 .form__field--price label {
-  top: 17px;
+  top: 5px;
 }
 .form__field--price input[type=number] {
   padding-left: 19px;
