Поправлен бекэнд  и фронтенд.

--- a/frontend/src/app/pages/offers/header/header.component.html
+++ b/frontend/src/app/pages/offers/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header__wrapper">
-  <a class="header__logo logo" href="/offers">
+  <a class="header__logo logo" href="/offers/offers-list">
     <img ngSrc="assets/img/logo.svg" width="149" height="72" alt="Логотип Mishka Board">
   </a>
 
