--- a/frontend/src/app/pages/offers/footer/footer.component.html
+++ b/frontend/src/app/pages/offers/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="page-footer">
   <div class="page-footer__wrapper">
     <div class="page-footer__col">
-      <a href="/offers" class="page-footer__logo logo">
+      <a href="/offers/offers-list" class="page-footer__logo logo">
         <img ngSrc="assets/img/logo-footer.svg" width="86" height="35" alt="Логотип MishkaBoard">
       </a>
       <p class="page-footer__copyright">Разработано на курсе
